# NTPie

./: Cargo.toml  README.md
src/: packet.rs
src/libntpie/: dns.rs  lib.rs  packet.rs  server.rs
src/ntpie/: main.rs
