[package]
name = "ntpie"
version = "0.0.1"
authors = ["Josh Driver <keeperofdakeys@gmail.com>"]
description = "NTP tools written in rust"
repository = "https://github.com/keeperofdakeys/ntpie"
readme = "README.md"

[dependencies]
# resolve = "0.0.1"
dns-lookup = { path = "../dns-lookup" }
# dns-lookup = "0.1.0"
libc = "0.2.8"

[[bin]]
name="ntpie"
path="src/ntpie/main.rs"

[lib]
name="libntpie"
path="src/libntpie/lib.rs"
